packages/quantic/force-app/custom-token/main/default/objects/TokenSettings__c/TokenSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Settings</label>
</CustomObject>