packages/quantic/force-app/custom-token/main/default/objects/TokenSettings__c/fields/ApiKey__c.field-meta.xml
<CustomField>
    <fullName>ApiKey__c</fullName>
    <label>Api key</label>
    <length>255</length>
    <type>Text</type>
    <description>An API key capable of requesting a search token (see: https://docs.coveo.com/en/56/build-a-search-ui/search-token-authentication#requesting-a-search-token)</description>
</CustomField>