packages/quantic/force-app/custom-token/main/default/objects/TokenSettings__c/fields/PlatformUrl__c.field-meta.xml
<CustomField>
    <fullName>PlatformUrl__c</fullName>
    <label>Custom Endpoint Proxy</label>
    <length>255</length>
    <type>Text</type>
    <description>The URL of a custom proxy endpoint to proxy requests to Coveo. Leave empty if you are not using one. Custom endpoints proxy must point to https://yourOrgId.org.coveo.com.</description>
</CustomField>